src/main/java/semantic/symbolTable/test/failing/missingConstructor.ru
/? MissingConstructorException
impl A {
    fn someFunction() -> void {}
    fn otherFunction() -> void {}
    fn anyFunctionButConstructor() -> void {}
}

start {}